--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
       flex-direction: row;
       justify-content: space-between;
       align-items: center;
+      margin: 0 0 2rem 0;
     }
 
     .notifications {
@@ -86,6 +87,38 @@
       color: var(--dark_grayish_blue);
     }
 
+    .notifications_element {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+      gap: 1rem;
+      margin: 0 0 2rem 0;
+    }
+
+    .avatar {
+      max-width: 3rem;
+      width: 100%;
+    }
+
+    .notifications_element .text {
+      display: flex;
+      flex-direction: column;
+      gap: .5rem;
+    }
+
+    .notifications_element .text p:nth-child(1) {
+      color: var(--dark_grayish_blue);
+    }
+
+    .notifications_element .text p strong:nth-child(1) {
+      color: initial;
+    }
+
+    .notifications_element .text p:nth-child(2) {
+      color: var(--grayish_blue);
+    }
+
     /* .attribution {
       font-size: 11px;
       text-align: center;
@@ -107,17 +140,34 @@
 
       <p>Mark all as read</p>
     </header>
+
+    <div class="notifications_element">
+      <img class="avatar" src="images/avatar-mark-webber.webp" alt="avatar-mark-webber.webp">
+
+      <div class="text">
+        <p><strong>Mark Webber</strong> reacted to your recent post <strong>My first tournament today!</strong></p>
+        <p>1m ago</p>
+      </div>
+    </div>
+
+    <div class="notifications_element">
+      <img class="avatar" src="images/avatar-angela-gray.webp" alt="avatar-angela-gray.webp">
+
+      <div class="text">
+        <p><strong>Angela Gray</strong> followed you</p>
+        <p>5m ago</p>
+      </div>
+    </div>
+
+    <div class="notifications_element">
+      <img class="avatar" src="images/avatar-jacob-thompson.webp" alt="avatar-jacob-thompson.webp">
+
+      <div class="text">
+        <p><strong>Jacob Thompson</strong> has joined your group <em>Chess Club</em></p>
+        <p>1 day ago</p>
+      </div>
+    </div>
   </main>
-
-  <!-- Notifications 3 -->
-
-  <!--  -->
-
-  <!-- Mark Webber reacted to your recent post My first tournament today! -->
-  <!-- 1m ago -->
-
-  <!-- Angela Gray followed you -->
-  <!-- 5m ago -->
 
   <!-- Jacob Thompson has joined your group Chess Club -->
   <!-- 1 day ago -->
