Updating index.html

--- a/index.html
+++ b/index.html
@@ -14,201 +14,7 @@
 
   <title>Frontend Mentor | Notifications page</title>
 
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;800&display=swap');
-    /* font-family: 'Plus Jakarta Sans', sans-serif; */
-
-    :root {
-      --red: hsl(1, 90%, 64%);
-      --blue: hsl(219, 85%, 26%);
-      --white: hsl(0, 0%, 100%);
-      --very_light_grayish_blue: hsl(210, 60%, 98%);
-      --light_grayish_blue_1: hsl(211, 68%, 94%);
-      --light_grayish_blue_2: hsl(205, 33%, 90%);
-      --grayish_blue: hsl(219, 14%, 63%);
-      --dark_grayish_blue: hsl(219, 12%, 42%);
-      --very_dark_blue: hsl(224, 21%, 14%);
-    }
-
-    * {
-      padding: 0;
-      margin: 0;
-      box-sizing: border-box;
-      font-family: 'Plus Jakarta Sans', sans-serif;
-      font-size: 16px;
-    }
-
-    body {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      min-width: 100%;
-      min-height: 100vh;
-      background-color: var(--very_light_grayish_blue);
-    }
-
-    main {
-      background-color: var(--white);
-      max-width: 45rem;
-      width: 100%;
-      height: 90vh;
-      padding: 2rem;
-      border-radius: 1rem;
-      position: relative;
-    }
-
-    header {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
-      margin: 0 0 2rem 0;
-    }
-
-    .notifications {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      gap: 1rem;
-    }
-
-    .notifications h2 {
-      font-weight: 800;
-      font-size: 22px;
-    }
-
-    .notifications span {
-      background-color: var(--blue);
-      color: var(--white);
-      padding: .2rem .8rem .3rem .8rem;
-      border-radius: .5rem;
-    }
-
-    header p {
-      color: var(--dark_grayish_blue);
-    }
-
-    header p,
-    .notifications_element .text p strong,
-    p em,
-    p:nth-child(3),
-    .notifications_element img:last-child,
-    .unread {
-      cursor: pointer;
-      transition: .3s all ease-out;
-    }
-
-    header p:hover,
-    .notifications_element .text p strong:nth-child(1):hover,
-    .notifications_element p strong:hover {
-      color: var(--blue);
-    }
-
-    p:nth-child(3):hover {
-      background-color: var(--light_grayish_blue_1);
-    }
-
-    .notifications_element img:last-child:hover {
-      padding: .1rem;
-      border: 1px solid var(--very_light_grayish_blue);
-      border-radius: .5rem;
-    }
-
-    .notifications_element {
-      display: flex;
-      flex-direction: row;
-      justify-content: flex-start;
-      align-items: flex-start;
-      gap: 1rem;
-      margin: 0 0 2rem 0;
-    }
-
-    .avatar {
-      max-width: 3rem;
-      width: 100%;
-    }
-
-    .notifications_element .text {
-      display: flex;
-      flex-direction: column;
-      gap: .5rem;
-      line-height: 1.5rem;
-    }
-
-    .notifications_element .text p:nth-child(1) {
-      color: var(--dark_grayish_blue);
-    }
-
-    .notifications_element .text p strong:nth-child(1) {
-      color: var(--very_dark_blue);
-    }
-
-    .notifications_element .text p em {
-      font-weight: 800;
-      font-style: normal;
-      color: var(--blue);
-    }
-
-    .notifications_element .text p:nth-child(2) {
-      color: var(--grayish_blue);
-    }
-
-    .notifications_element .text p:nth-child(3) {
-      border: 1px solid var(--light_grayish_blue_2);
-      padding: 1rem;
-      border-radius: .5rem;
-      max-width: 36rem;
-      width: 100%;
-    }
-
-    .notifications_element img:last-child {
-      position: absolute;
-      right: 3rem;
-      max-width: 3rem;
-      width: 100%;
-    }
-
-    .unread {
-      background-color: var(--very_light_grayish_blue);
-      padding: .2rem 0;
-      border-radius: .5rem;
-    }
-
-    .unread p:nth-child(1)::after {
-      content: "";
-      position: absolute;
-      margin: .5rem 0 0 .5rem;
-      width: .5rem;
-      height: .5rem;
-      border-radius: 50%;
-      background-color: var(--red);
-    }
-
-    .attribution {
-      padding: 2rem 0 0 0;
-    }
-
-    .attribution p {
-      color: var(--very_dark_blue);
-      font-size: 10px;
-      text-align: center;
-    }
-
-    .attribution a {
-      text-decoration: none;
-      font-size: 10px;
-      text-align: center;
-      color: var(--blue);
-      cursor: pointer;
-      transition: .5s all ease-in-out;
-    }
-
-    .attribution a:hover {
-      font-size: 18px;
-      color: var(--red);
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -296,29 +102,7 @@
     <p>Coded by <a href="https://github.com/RafaelHDSV" target="_blank">Rafael Henrique de Sousa Vieira</a>.</p>
   </footer>
 
-  <script>
-    let unread = document.querySelectorAll('.unread')
-    let spanNotifications = document.getElementById('span_notifications')
-    let markAll = document.getElementById('mark_all')
-    let notificationsUnread = 3
-
-    for (let i = 0; i < unread.length; i++) {
-      unread[i].addEventListener('click', () => {
-        unread[i].classList.remove('unread')
-        notificationsUnread -= 1
-        spanNotifications.innerHTML = notificationsUnread
-      })
-    }
-
-    markAll.addEventListener('click', () => {
-      notificationsUnread = 0
-      spanNotifications.innerHTML = notificationsUnread
-
-      for (let i = 0; i < unread.length; i++) {
-        unread[i].classList.remove('unread')
-      }
-    })
-  </script>
+  <script src="script.js"></script>
 </body>
 
 </html>
